--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
           <h3>About</h3>
         </div>
         <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 cols">
-          <img class="img2" src="/images/Sinan pic2.jpg">
+          <img class="img2" src="/images/Sinan pic.jpg">
 
 
         </div>
